objects/MyCustomObject__c.object
<CustomObject>
    <fields>
        <fullName>SomeNumber__c</fullName>
        <label>SomeNumber</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>an_external_id__c</fullName>
        <externalId>true</externalId>
        <label>an_external_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MyCustomObjects</relationshipLabel>
        <relationshipName>MyCustomObjects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewObjectLookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NewObjectLookup</label>
        <referenceTo>NewObjectLookup__c</referenceTo>
        <relationshipLabel>MyCustomObjects</relationshipLabel>
        <relationshipName>MyCustomObjects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datetime__c</fullName>
        <label>datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <label>percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>time__c</fullName>
        <label>time</label>
        <type>Time</type>
    </fields>
    <label>MyCustomObject</label>
    <nameField>
        <label>MyCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>SomeNumber_less_than_10</fullName>
        <active>true</active>
        <errorConditionFormula>SomeNumber__c &gt;= 10</errorConditionFormula>
        <errorMessage>SomeNumber should be less than 10</errorMessage>
    </validationRules>
</CustomObject>